# SDRAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  sdr_agent.py
app/api/: __init__.py  routes.py  schemas.py
app/db/: __init__.py  store.py
app/llm/: __init__.py  base.py  factory.py  gpt4all_adapter.py  mock_adapter.py  ollama_adapter.py  openai_adapter.py
app/static/: index.html
app/tools/: __init__.py  crm_tool.py  prompts.py  research_tool.py
app/utils/: __init__.py  json_guard.py  retry.py
tests/: __init__.py  test_e2e_mock.py  test_research_tool.py
